# nescrow

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
contract-rs/: Cargo.toml  README.md  build.sh  deploy.sh  integrity_check.sh  package-lock.json  rust-toolchain.toml  switch_accounts.sh  test.sh
contract-rs/sandbox-ts/: package-lock.json
contract-rs/sandbox-ts/src/: main.ava.ts
contract-rs/src/: contract.rs  lib.rs
contract-rs/src/constants/: mod.rs
contract-rs/src/contract/: customer_registration.rs  deposits_withdrawals.rs  state_migration.rs  tasks.rs  utils.rs
contract-rs/src/contract/tests/: common_types_tests.rs  ft_on_transfer_tests.rs  get_withdrawable_amount_tests.rs  mod.rs  register_customer_tests.rs  setup_tests.rs  tasks_tests.rs  utils.rs
contract-rs/src/enums/: storage_keys.rs
contract-rs/src/tests/: ft_on_transfer_tests.rs  get_withdrawable_amount_tests.rs  mod.rs  register_customer_tests.rs  tasks_tests.rs  utils.rs
contract-rs/src/types/: common_types.rs  ft_transfer_message.rs  mod.rs  pagination.rs  task.rs  task_legacy.rs
contract-rs/src/types/borsh/: date_utc.rs  mod.rs
contract-ts/: deploy.sh  package.json
contract-ts/src/: contract.ts  model.ts
frontend/: App.js  index.js  near-interface.js  package.json
frontend/components/: Form.jsx
next-app/: .eslintrc.json  .prettierrc.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
next-app/src/app/: layout.tsx  page.tsx
next-app/src/components/: EscrowLink.tsx
next-app/src/utils/: walletUtils.ts
(+7 files in other folders)
