[package]
name = "nescrow"
version = "1.0.0"
authors = ["volodymyr.matselyukh@gmail.com"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.2.1", features = ["unit-testing"] }
borsh = "1.5.1"
chrono = "0.4.38"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []

